--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sgagg.demoapp.MainActivity">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/countTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
+        android:gravity="center"
         android:textSize="55sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.242" />
+        android:layout_marginTop="100dp"
+        />
 
-    <Button
-        android:id="@+id/toastButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Toast"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_marginTop="-7dp"
-        app:layout_constraintTop_toBottomOf="@+id/countTextView" />
 
-    <Button
-        android:id="@+id/countButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Count"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/countTextView"
-        android:layout_marginLeft="148dp"
-        android:onClick="onClickFunction"
-        app:layout_constraintLeft_toLeftOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/randomButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RANDOM"
-        android:onClick="randomActivity"
-        tools:layout_editor_absoluteY="173dp"
-        tools:layout_editor_absoluteX="300dp" />
+        <Button
+            android:id="@+id/toastButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Toast"
 
-</android.support.constraint.ConstraintLayout>
+            />
+
+        <Button
+            android:id="@+id/countButton"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Count"
+            android:onClick="onClickFunction" />
+
+        <Button
+            android:id="@+id/randomButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RANDOM"
+            android:onClick="randomActivity"
+            />
+
+    </LinearLayout>
+</LinearLayout>
